--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Redirecting...</title>
 </head>
 <body>
-    If you are not redirected, <a href="/welecja-pre2023/index.html">click here</a>.
+    If you are not redirected, <a href="welecja-pre2023/welecja.pl/index.html">click here</a>.
 </body>
 </html>
