--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0;url=/welecja-pre2023/welecja.pl/index.html">
+    <meta http-equiv="refresh" content="0;url=/welecja-pre2023/index.html">
     <title>Redirecting...</title>
 </head>
 <body>
-    If you are not redirected, <a href="/welecja-pre2023/welecja.pl/index.html">click here</a>.
+    If you are not redirected, <a href="/welecja-pre2023/index.html">click here</a>.
 </body>
 </html>
