--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<!-- <head>
     <meta charset="UTF-8">
     <meta http-equiv="refresh" content="0;url=/welecja-pre2023/welecja.pl/index.html">
     <title>Redirecting...</title>
-</head>
+</head> -->
 <body>
-    If you are not redirected, <a href="/welecja-pre2023/welecja.pl/index.html">click here</a>.
+    If you are not redirected, <a href="https://welecja.github.io/welecja-pre2023/welecja.pl/index.html">click here</a>.
 </body>
 </html>
